--- a/src/medalion/bronze.ipynb
+++ b/src/medalion/bronze.ipynb
@@ -19,10 +19,31 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.types import StructType, StructField, StringType\n",
-    "from pyspark.sql.functions import input_file_name, count, when, col, lit, max,row_number, date_format\n",
+    "from pyspark.sql.functions import input_file_name, count, when, col, lit, max,row_number, date_format, current_timestamp\n",
     "from pyspark.sql.window import Window\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.dbutils import DBUtils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0651397d-bc56-43c0-864c-c5bbaa6d0dc6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Workspace/Repos/felipegoraro@outlook.com/projeto_nintendo/src/config/spark_performance"
    ]
   },
   {
@@ -251,7 +272,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "1accc5cf-8fd3-4437-8c93-ee20fb2ce570",
+     "nuid": "c42c7eec-110c-4611-adf3-eaa6b3385e4f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -277,13 +298,19 @@
     "        print(f\"STATUS ALERTA - Dataframes não foram unidos corretamente.\")\n",
     "        print(\"\\nRetornando um dataframe vazio!\")\n",
     "        return spark.createDataFrame([], schema=json_schema)\n",
+    "    \n",
+    "    # 1. Encontrar a maior data no DataFrame\n",
+    "    maior_data = df_combined.select(max(\"extract\")).collect()[0][0]\n",
+    "\n",
+    "    # 2. Filtrar o DataFrame para mostrar apenas as linhas com a maior data\n",
+    "    df_maior_data = df_combined.filter(col(\"extract\") == maior_data)\n",
     "\n",
     "    # 2- Retirando linhas duplicadas do Dataframe\n",
     "    print(f\"\\n--- Obtendo novos dados ---\")\n",
     "    # Contando ocorrências de cada linha\n",
-    "    df_counts = df_combined.groupBy(\"codigo\",\"desconto\", \"parcelamento\", \"preco\").count()\n",
+    "    df_counts = df_maior_data.groupBy(\"codigo\",\"desconto\", \"parcelamento\", \"preco\").count()\n",
     "    df_counts = df_counts.select('codigo','count')\n",
-    "    df_joined = df_combined.join(df_counts.select(\"codigo\", \"count\"), on=\"codigo\", how=\"left\")\n",
+    "    df_joined = df_maior_data.join(df_counts.select(\"codigo\", \"count\"), on=\"codigo\", how=\"left\")\n",
     "\n",
     "    # Filtrando apenas as linhas que aparecem uma única vez\n",
     "    df_sem_duplicatas = df_joined.filter(col(\"count\") == 1).drop(\"count\")\n",
@@ -299,18 +326,12 @@
     "    # Supondo que sua coluna de data se chame 'extract'\n",
     "    df_result = df_result.withColumn(\"data_ref\", date_format(\"extract\", \"yyyy-MM-dd\"))\n",
     "\n",
-    "    # 1. Encontrar a maior data no DataFrame\n",
-    "    maior_data = df_result.select(max(\"extract\")).collect()[0][0]\n",
-    "\n",
-    "    # 2. Filtrar o DataFrame para mostrar apenas as linhas com a maior data\n",
-    "    df_maior_data = df_result.filter(col(\"extract\") == maior_data)\n",
-    "    \n",
-    "    if df_maior_data.count() > 0:\n",
-    "        print(f\"STATUS INCREMENTAL - Dataframe possui novos {df_maior_data.count()} dados incremental\")\n",
+    "    if df_result.count() > 0:\n",
+    "        print(f\"STATUS INCREMENTAL - Dataframe possui novos {df_result.count()} dados incremental\")\n",
     "    else:\n",
     "        print(f\"STATUS INCREMENTAL - Dataframes não possuí novos dados.\")\n",
     "\n",
-    "    return df_maior_data\n",
+    "    return df_result\n",
     "\n",
     "df_incremental = comparando_dados_incremental(df_json_unificado,df_old)"
    ]
@@ -340,8 +361,11 @@
     "    try:\n",
     "        # 1- Obter a contagem de linhas ANTES de salvar ---\n",
     "        num_rows_to_save = df.count()\n",
-    "        df_old = spark.read.format(\"delta\").load(delta_table_path)\n",
-    "        num_rows_already_saved = df_old.count()\n",
+    "        try:\n",
+    "            df_old = spark.read.format(\"delta\").load(delta_table_path)\n",
+    "            num_rows_already_saved = df_old.count()\n",
+    "        except:\n",
+    "            num_rows_already_saved = 0\n",
     "\n",
     "        print(f\"Número de linhas no DataFrame a ser salvo: {num_rows_to_save}\")\n",
     "\n",
@@ -417,8 +441,6 @@
     "\n",
     "        except Exception as sql_e:\n",
     "            print(f\"STATUS ALERTA - Não foi possível obter detalhes da tabela Delta (verifique o log): {sql_e}\")\n",
-    "            # A linha abaixo não pode ser executada por estar dentro de um try-except, por isso a retirei\n",
-    "            # print(\"Tente verificar manualmente a estrutura de pastas com '%fs ls -l dbfs:/nintendo/bronze/'.\")\n",
     "\n",
     "\n",
     "    except Exception as e:\n",
