--- a/src/medalion/silver.ipynb
+++ b/src/medalion/silver.ipynb
@@ -35,6 +35,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "0356b024-5262-44fe-b5ac-82fcb879e9bc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Workspace/Repos/felipegoraro@outlook.com/projeto_nintendo/src/config/spark_performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "726f08e4-78ac-489f-8f07-2991dd830a7d",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -72,19 +93,43 @@
     "        print(\"\\nRetornando um dataframe vazio!\")\n",
     "        # Em caso de erro, retorne um dataframe vazio com o schema definido anteriormente\n",
     "        return spark.createDataFrame([], schema=schema)\n",
-    "\n",
-    "    # 2- Tentando ler o arquivo Delta do Volume Bronze\n",
-    "    print(f\"\\n--- Verificação da leitura do arquivo Delta ---\")\n",
+    "    \n",
+    "    # 2-  Recuperar partições existentes\n",
     "    try:\n",
     "        df = spark.read.format(\"delta\").load(nome_tabela)\n",
-    "        print(f\"STATUS OK - Tabela Delta '{nome_tabela}' carregada com sucesso.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"STATUS ALERTA - Erro ao acessar a tabela '{nome_tabela}': {e}\")\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        ultima_particao_df = df.select(max(coluna_particao).alias(\"ultima_particao\"))\n",
+    "        \n",
+    "        ultima_particao = (\n",
+    "            ultima_particao_df.first()[\"ultima_particao\"]\n",
+    "            if ultima_particao_df.first()\n",
+    "            else None\n",
+    "        )\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"STATUS ALERTA - Erro ao obter última partição da tabela '{nome_tabela}': {e}\")\n",
+    "\n",
+    "    # 3- Tentando ler o arquivo Delta do Volume Bronze\n",
+    "    print(f\"\\n--- Verificação da leitura do arquivo Delta ---\")\n",
+    "    try:\n",
+    "\n",
+    "        filtro = f\"{coluna_particao} = '{ultima_particao}'\"\n",
+    "\n",
+    "        df = spark.read.format(\"delta\").load(nome_tabela) \\\n",
+    "                .where(filtro)\n",
+    "        print(f\"STATUS OK - Tabela Delta '{nome_tabela}' carregada com sucesso pela partição: {ultima_particao}.\")\n",
+    "\n",
     "    except Exception as e:\n",
     "        # Em caso de erro, retorne um dataframe vazio com o schema definido anteriormente\n",
     "        print(f\"STATUS ALERTA - Erro ao carregar a tabela Delta '{nome_tabela}'. Provavelmente não é uma tabela Delta válida ou não contém dados. Detalhe do erro: {e}\")\n",
     "        print(\"\\nRetornando um dataframe vazio!\")\n",
     "        return spark.createDataFrame([], schema=schema)\n",
     "    \n",
-    "    # 3- Verificando se o dataframe está vazio\n",
+    "    # 4- Verificando se o dataframe está vazio\n",
     "    # Em caso positivo, retorne um dataframe vazio com o schema definido anteriormente\n",
     "    print(f\"\\n--- Verificação se arquivo Delta está vazio ---\")\n",
     "    if df.rdd.isEmpty():\n",
@@ -93,35 +138,8 @@
     "        return spark.createDataFrame([], schema=schema)\n",
     "    else:\n",
     "        print(f\"STATUS OK - Tabela Delta '{nome_tabela}' não está vazio.\")\n",
+    "        return df\n",
     "\n",
-    "    # 4- Buscando a ultima partição do dataframe\n",
-    "    print(f\"\\n--- Verificando ultima partição ---\")\n",
-    "    ultima_particao_df = df.select(max(coluna_particao).alias(\"ultima_particao\"))\n",
-    "    ultima_particao = None\n",
-    "    if ultima_particao_df.first():\n",
-    "        print(f\"STATUS OK - Tabela Delta '{nome_tabela}' contém partição: {ultima_particao_df}.\")\n",
-    "        ultima_particao = ultima_particao_df.first()[\"ultima_particao\"]\n",
-    "\n",
-    "    print(f\"\\n--- Filtrando Tabela pela ultima partição ---\")\n",
-    "    # 5- Iniciando filtro da ultima partição da tabeça\n",
-    "    if ultima_particao is not None:\n",
-    "        filtro = f\"{coluna_particao} = '{ultima_particao}'\"\n",
-    "        df_ultima_particao = df.where(filtro)\n",
-    "        print(f\"STATUS OK - Tabela '{nome_tabela}' filtrada pela última partição: {ultima_particao}\")\n",
-    "\n",
-    "        # Realizando contagem de linhas do dataframe filtrado\n",
-    "        qtd = df_ultima_particao.count()\n",
-    "\n",
-    "        # Se o dataframe estiver vazio, ou seja, menor que 1 linha, retorne um erro pois o dataframe não deve estar vazio\n",
-    "        assert qtd > 0, f\"A última partição '{ultima_particao}' da tabela '{nome_tabela}' está vazia.\"\n",
-    "        \n",
-    "        print(f\"Leitura da tabela '{nome_tabela}' carregada com sucesso. Número de linhas: {qtd}\")\n",
-    "\n",
-    "        return df_ultima_particao\n",
-    "    # Em caso de nenhuma partição encontrada no dataframe, será retornado um dataframe vazio com o schema definido anteriormente\n",
-    "    else:\n",
-    "        print(f\"STATUS ALERTA - Não foram encontradas partições na tabela '{nome_tabela}'.\")\n",
-    "        return spark.createDataFrame([], schema=df.schema)\n",
     "\n",
     "# Caminho para a external location do diretório bronze\n",
     "bronze_path = f\"/Volumes/nintendodatabrickspkjgt7_workspace/nintendo/bronze\"\n",
