--- a/src/metrics/best-price-oled.ipynb
+++ b/src/metrics/best-price-oled.ipynb
@@ -5,6 +5,24 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "18229c7c-4f08-48b2-92f5-7ad1389fb73a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Workspace/Repos/felipegoraro@outlook.com/projeto_nintendo/src/config/spark_performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "implicitDf": true,
