--- a/src/normalize/tabelas-preço.ipynb
+++ b/src/normalize/tabelas-preço.ipynb
@@ -10,6 +10,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "63e96abb-01fa-4da8-ba2d-aedde3e6a895",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Workspace/Repos/felipegoraro@outlook.com/projeto_nintendo/src/config/spark_performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "1a332cde-0734-46d4-8505-36c72c7082a1",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -46,7 +67,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE TABLE `nintendodatabrickspkjgt7_workspace`.`nintendo`.price AS\n",
+    "CREATE OR REPLACE TABLE `nintendodatabrickspkjgt7_workspace`.`nintendo`.`price` AS\n",
     "SELECT \n",
     "    codigo,\n",
     "    preco,\n",
