--- a/src/normalize/tabelas-produtos.ipynb
+++ b/src/normalize/tabelas-produtos.ipynb
@@ -10,6 +10,27 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "2aacdf85-cc67-460b-a4e4-3bf7167ded0e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Workspace/Repos/felipegoraro@outlook.com/projeto_nintendo/src/config/spark_performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "1a332cde-0734-46d4-8505-36c72c7082a1",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -48,10 +69,19 @@
     "%sql\n",
     "CREATE OR REPLACE TABLE `nintendodatabrickspkjgt7_workspace`.`nintendo`.`products` AS\n",
     "SELECT \n",
-    "    DISTINCT codigo,\n",
+    "    codigo,\n",
     "    nome,\n",
     "    origem\n",
-    "FROM `_sqldf`\n",
+    "FROM (\n",
+    "    SELECT \n",
+    "        codigo,\n",
+    "        nome,\n",
+    "        origem,\n",
+    "        extract,\n",
+    "        ROW_NUMBER() OVER (PARTITION BY codigo ORDER BY extract DESC) AS rn\n",
+    "    FROM `_sqldf`\n",
+    ")\n",
+    "WHERE rn = 1\n",
     "ORDER BY codigo"
    ]
   }
@@ -68,7 +98,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7849376363535620,
+     "commandId": 7865337247204397,
      "dataframes": [
       "_sqldf"
      ]
