--- a/src/config/systemtables-get or put.ipynb
+++ b/src/config/systemtables-get or put.ipynb
@@ -55,6 +55,7 @@
     "base_environment": "",
     "environment_version": "1"
    },
+   "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
