--- a/src/normalize/tabelas-detalhes.ipynb
+++ b/src/normalize/tabelas-detalhes.ipynb
@@ -5,6 +5,24 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "88f98d31-1495-4ddf-82e5-7c2f4121b507",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%run /Workspace/Repos/felipegoraro@outlook.com/projeto_nintendo/src/config/spark_performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -37,7 +55,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "bb5565b3-966b-4330-a7ab-de9c16d0ed06",
+     "nuid": "071b8125-8d6e-4317-b578-1a71dd90649b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -46,17 +64,28 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE TABLE `nintendodatabrickspkjgt7_workspace`.`nintendo`.details AS\n",
+    "CREATE OR REPLACE TABLE `nintendodatabrickspkjgt7_workspace`.`nintendo`.`details` AS\n",
     "SELECT \n",
-    "    DISTINCT codigo,\n",
+    "    codigo,\n",
     "    memoria,\n",
     "    oled,\n",
     "    `lite`,\n",
     "    recomendacao,\n",
     "    link\n",
-    "\n",
-    "FROM `_sqldf`\n",
-    "ORDER BY codigo "
+    "FROM (\n",
+    "    SELECT \n",
+    "        codigo,\n",
+    "        memoria,\n",
+    "        oled,\n",
+    "        `lite`,\n",
+    "        recomendacao,\n",
+    "        link,\n",
+    "        extract,\n",
+    "        ROW_NUMBER() OVER (PARTITION BY codigo ORDER BY extract DESC) AS rn\n",
+    "    FROM `_sqldf`\n",
+    ")\n",
+    "WHERE rn = 1\n",
+    "ORDER BY codigo"
    ]
   }
  ],
@@ -72,7 +101,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7849376363535614,
+     "commandId": 7865337247204399,
      "dataframes": [
       "_sqldf"
      ]
