--- a/src/config/systemtables-get or put.ipynb
+++ b/src/config/systemtables-get or put.ipynb
@@ -10,6 +10,71 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "d6f65173-f130-4ec4-aa22-0afab8ac7e51",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "workspace_id = dbutils.notebook.entry_point.getDbutils().notebook().getContext().workspaceId().get()\n",
+    "display(spark.createDataFrame([(workspace_id,)], [\"workspace_id\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9f1cfef7-57d3-480e-bd41-981c6883432f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiUrl().get()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d3687553-b7a5-4193-a3f1-cbe091e3aa44",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "metastore_id = spark.sql(\"SELECT current_metastore() AS metastore_id\").collect()[0]['metastore_id']\n",
+    "display(spark.createDataFrame([(metastore_id,)], [\"metastore_id\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "f2c41ef2-e60a-49b1-8742-aa85697bbb41",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -59,7 +124,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 8413524069929277,
+     "commandId": 6716574505157321,
      "dataframes": [
       "_sqldf"
      ]
