--- a/src/monitoring/grafana/status_job.ipynb
+++ b/src/monitoring/grafana/status_job.ipynb
@@ -7,11 +7,10 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
-      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "bc43bd89-b418-435a-a8cc-97774723accc",
+     "nuid": "4134602a-ba86-490d-a294-bf396d1f96d4",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -21,31 +20,26 @@
    "source": [
     "%sql\n",
     "SELECT \n",
-    "  account_id,\n",
-    "  workspace_id,\n",
-    "  job_id,\n",
-    "  run_id,\n",
-    "  period_start_time,\n",
-    "  period_end_time,\n",
-    "  task_key,\n",
-    "  compute_ids,\n",
     "  result_state,\n",
-    "  job_run_id,\n",
-    "  parent_run_id,\n",
-    "  CASE \n",
-    "    WHEN result_state = 'SUCCESS' THEN 'SUCCESS'\n",
-    "    WHEN result_state IN ('ERROR', 'FAILED', 'SKIPPED') THEN 'ERROR'\n",
-    "    ELSE result_state\n",
-    "  END AS result_state,\n",
-    "  (unix_timestamp(period_end_time) - unix_timestamp(period_start_time)) / 60 AS duration_minutes\n",
-    "FROM system.lakeflow.job_task_run_timeline\n",
-    "WHERE period_start_time > (SELECT MIN(change_time) FROM system.lakeflow.jobs)\n",
-    "  AND job_id IN (\n",
-    "    SELECT DISTINCT job_id\n",
-    "    FROM system.lakeflow.jobs\n",
-    "    WHERE change_time > (SELECT MAX(delete_time) + INTERVAL 1 MINUTE FROM system.lakeflow.jobs)\n",
-    "  )\n",
-    "ORDER BY duration_minutes DESC"
+    "  COUNT(*) AS count,\n",
+    "  ROUND(100.0 * COUNT(*) / SUM(COUNT(*)) OVER (), 2) AS percentage\n",
+    "FROM (\n",
+    "  SELECT \n",
+    "    CASE \n",
+    "      WHEN result_state = 'SUCCESS' THEN 'SUCCEEDED'\n",
+    "      WHEN result_state IN ('ERROR', 'FAILED', 'SKIPPED') THEN 'ERROR'\n",
+    "      ELSE result_state\n",
+    "    END AS result_state\n",
+    "  FROM system.lakeflow.job_task_run_timeline\n",
+    "  WHERE period_start_time > (SELECT MIN(change_time) FROM system.lakeflow.jobs)\n",
+    "    AND job_id IN (\n",
+    "      SELECT DISTINCT job_id\n",
+    "      FROM system.lakeflow.jobs\n",
+    "      WHERE change_time > (SELECT MAX(delete_time) + INTERVAL 1 MINUTE FROM system.lakeflow.jobs)\n",
+    "    )\n",
+    ") AS subquery\n",
+    "GROUP BY result_state\n",
+    "ORDER BY count DESC\n"
    ]
   }
  ],
@@ -61,7 +55,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5307126272956410,
+     "commandId": -1,
      "dataframes": [
       "_sqldf"
      ]
