adicionando comandos de config

--- a/src/config/systemtables-get or put.ipynb
+++ b/src/config/systemtables-get or put.ipynb
@@ -10,6 +10,46 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "e2349f67-cf93-401b-b742-e783755147e1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%pip install databricks-cli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3c1b950e-86bd-4de8-bf14-7f5ca601c06a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from databricks_cli.sdk import ApiClient\n",
+    "from databricks_cli.sdk.service import TokenService"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "d6f65173-f130-4ec4-aa22-0afab8ac7e51",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -40,7 +80,8 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiUrl().get()"
+    "api_url = dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiUrl().get()\n",
+    "api_url"
    ]
   },
   {
@@ -63,6 +104,34 @@
    "source": [
     "metastore_id = spark.sql(\"SELECT current_metastore() AS metastore_id\").collect()[0]['metastore_id']\n",
     "display(spark.createDataFrame([(metastore_id,)], [\"metastore_id\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c9abf524-02d9-4a5f-96a5-f48aaa4c9c30",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "api_client = ApiClient(host=api_url, token=dbutils.notebook.entry_point.getDbutils().notebook().getContext().apiToken().get())\n",
+    "\n",
+    "token_service = TokenService(api_client)\n",
+    "token_response = token_service.create_token(lifetime_seconds=3600, comment=\"Generated token\")\n",
+    "token = token_response['token_value']\n",
+    "\n",
+    "display(spark.createDataFrame([(token,)], [\"token\"]))"
    ]
   },
   {
@@ -124,7 +193,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6716574505157321,
+     "commandId": 5184719816697843,
      "dataframes": [
       "_sqldf"
      ]
