--- a/src/medalion/gold.ipynb
+++ b/src/medalion/gold.ipynb
@@ -69,7 +69,7 @@
     "    url = \"https://brasilapi.com.br/api/taxas/v1/cdi\"\n",
     "    try:\n",
     "        response = requests.get(url)\n",
-    "        response.raise_for_status()  # Raise an HTTPError for bad responses (4xx or 5xx)\n",
+    "        response.raise_for_status()\n",
     "        data = response.json()\n",
     "        cdi = 1 + (data['valor'] / 100)\n",
     "        return cdi\n",
