--- a/src/debug/dlt-metrics.ipynb
+++ b/src/debug/dlt-metrics.ipynb
@@ -5,13 +5,9 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "e523607d-5f14-4bd3-a9fa-fa9b4d04d7de",
+     "nuid": "3eb84756-feba-482a-9521-96acd02f2850",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -20,20 +16,19 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE OR REPLACE VIEW `nintendodatabrickswi86no_workspace`.`nintendo`.`best-price-oled` AS\n",
     "WITH produtos AS (\n",
     "    SELECT\n",
     "        codigo,\n",
     "        nome,\n",
     "        origem\n",
     "\n",
-    "    FROM nintendodatabrickswi86no_workspace.nintendo.products\n",
+    "    FROM nintendodatabrickswi86no_workspace.gold.products\n",
     "),\n",
     "preco AS (\n",
     "    SELECT\n",
     "        codigo,\n",
     "        preco\n",
-    "    FROM nintendodatabrickswi86no_workspace.nintendo.price\n",
+    "    FROM nintendodatabrickswi86no_workspace.gold.price\n",
     "),\n",
     "\n",
     "detalhes AS (\n",
@@ -42,7 +37,7 @@
     "        oled,\n",
     "        link,\n",
     "        recomendacao\n",
-    "    FROM nintendodatabrickswi86no_workspace.nintendo.details\n",
+    "    FROM nintendodatabrickswi86no_workspace.gold.details\n",
     "),\n",
     "\n",
     "produtos_filtrados AS (\n",
@@ -57,7 +52,7 @@
     "    FROM produtos\n",
     "    JOIN preco ON produtos.codigo = preco.codigo\n",
     "    JOIN detalhes ON produtos.codigo = detalhes.codigo\n",
-    "    WHERE detalhes.oled = 'Sim' AND produtos.origem IN (SELECT DISTINCT origem FROM nintendodatabrickswi86no_workspace.nintendo.products)\n",
+    "    WHERE detalhes.oled = 'Sim' AND produtos.origem IN (SELECT DISTINCT origem FROM nintendodatabrickswi86no_workspace.gold.products)\n",
     "),\n",
     "\n",
     "menores_precos AS (\n",
@@ -77,29 +72,6 @@
     "\n",
     "SELECT * FROM menores_precos"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "4d11a636-9abb-4a4a-a76c-ad5db52f4ae3",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "SELECT * FROM nintendodatabrickswi86no_workspace.nintendo.`best-price-oled`"
-   ]
   }
  ],
  "metadata": {
@@ -108,20 +80,14 @@
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
-    "environment_version": "2"
+    "environment_version": "3"
    },
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
-    "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7849376363535624,
-     "dataframes": [
-      "_sqldf"
-     ]
-    },
     "pythonIndentUnit": 4
    },
-   "notebookName": "best-price-oled",
+   "notebookName": "dlt-metrics",
    "widgets": {}
   },
   "language_info": {
