--- a/src/test/ingest-test.ipynb
+++ b/src/test/ingest-test.ipynb
@@ -5,68 +5,9 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "eed8adbf-ede4-425c-9296-f5171db81d63",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "CREATE SCHEMA IF NOT EXISTS nintendodatabricks_workspace.bronze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "740545de-b966-45a2-9255-afcda23c2cf0",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "CREATE EXTERNAL TABLE IF NOT EXISTS nintendodatabricks_workspace.bronze.nintendo (\n",
-    "  codigo STRING,\n",
-    "  nome STRING,\n",
-    "  preco STRING,\n",
-    "  desconto STRING,\n",
-    "  parcelamento STRING,\n",
-    "  link STRING,\n",
-    "  origem STRING\n",
-    ")\n",
-    "USING PARQUET\n",
-    "LOCATION 'abfss://nintendo@nintendostorageaccount.dfs.core.windows.net/bronze/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "6f89d7b5-255f-4750-8c69-3a704ba47dc2",
+     "nuid": "474c0b61-5021-4b2c-a485-4038eca0aca6",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -87,7 +28,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "27c57829-f585-4691-b652-b874bb3f3488",
+     "nuid": "fb13a4c6-881a-4bcc-9dea-e59b7e681949",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -99,8 +40,8 @@
     "from pyspark.sql.utils import AnalysisException\n",
     "from pyspark.sql.functions import col\n",
     "\n",
-    "table_name = \"nintendodatabricks_workspace.bronze.nintendo\"\n",
-    "expected_schema = [\"codigo\", \"nome\", \"preco\", \"desconto\", \"parcelamento\", \"link\", \"origem\"]\n",
+    "table_name = \"nintendodatabricks_workspace.bronze.consoles_ing\"\n",
+    "expected_schema = [\"desconto\", \"codigo\", \"nome\", \"preco\", \"parcelamento\", \"link\", \"origem\", \"extract\"]\n",
     "\n",
     "def check_table_exists(table):\n",
     "    try:\n",
@@ -108,13 +49,6 @@
     "        return True\n",
     "    except AnalysisException:\n",
     "        return False\n",
-    "\n",
-    "def check_external_table(table):\n",
-    "    desc = spark.sql(f\"DESCRIBE EXTENDED {table}\").collect()\n",
-    "    for row in desc:\n",
-    "        if row.col_name == 'Type' and 'EXTERNAL' in row.data_type.upper():\n",
-    "            return True\n",
-    "    return False\n",
     "\n",
     "def check_schema(table, expected_cols):\n",
     "    df = spark.table(table)\n",
@@ -137,10 +71,6 @@
     "def test_table_exists(table):\n",
     "    assert check_table_exists(table), f\"Table {table} should exist\"\n",
     "\n",
-    "@pytest.mark.parametrize(\"table\", [table_name])\n",
-    "def test_is_external_table(table):\n",
-    "    assert check_external_table(table), f\"Table {table} should be an external table\"\n",
-    "\n",
     "@pytest.mark.parametrize(\"table,expected_cols\", [(table_name, expected_schema)])\n",
     "def test_schema(table, expected_cols):\n",
     "    assert check_schema(table, expected_cols), f\"Schema of table {table} does not match expected\"\n",
@@ -153,36 +83,76 @@
     "\n",
     "@pytest.mark.parametrize(\"table\", [table_name])\n",
     "def test_not_empty(table):\n",
-    "    assert check_not_empty(table), f\"Table {table} is empty\"\n"
+    "    assert check_not_empty(table), f\"Table {table} is empty\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0e2e92a6-6d1d-42ec-badb-8a5b24d4f924",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Table exists:\", check_table_exists(table_name))\n",
+    "print(\"Schema ok:\", check_schema(table_name, expected_schema))\n",
+    "print(\"Null counts:\", check_nulls(table_name))\n",
+    "print(\"Not empty:\", check_not_empty(table_name))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b478354a-36cf-47dc-81ad-a2ef599e5312",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    test_table_exists(table_name)\n",
+    "    test_schema(table_name, expected_schema)\n",
+    "    test_no_nulls(table_name)\n",
+    "    test_not_empty(table_name)\n",
+    "    print(\"✅ Todos os testes passaram\")\n",
+    "except AssertionError as e:\n",
+    "    print(f\"❌ Falhou: {e}\")\n"
    ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": {
-    "hardware": {
-     "accelerator": null,
-     "gpuPoolId": null,
-     "memory": null
-    }
-   },
+   "computePreferences": null,
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
-    "environment_version": "2"
+    "environment_version": "3"
    },
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
-    "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7671482414530496,
-     "dataframes": [
-      "_sqldf"
-     ]
-    },
     "pythonIndentUnit": 4
    },
-   "notebookName": "bronze",
+   "notebookName": "ingest-test",
    "widgets": {}
   },
   "language_info": {
