--- a/src/config/pipeline.ipynb
+++ b/src/config/pipeline.ipynb
@@ -41,7 +41,8 @@
    },
    "outputs": [],
    "source": [
-    "from databricks.sdk.service.jobs import JobSettings as Job"
+    "from databricks.sdk.service.jobs import JobSettings as Job\n",
+    "from databricks.sdk import WorkspaceClient\n"
    ]
   },
   {
@@ -62,23 +63,47 @@
    },
    "outputs": [],
    "source": [
-    "from databricks.sdk import WorkspaceClient\n",
-    "\n",
     "w = WorkspaceClient()\n",
     "\n",
-    "jobmedalion = None\n",
-    "jobmodeling = None\n",
+    "jobnintendo = None\n",
     "\n",
     "for job in w.jobs.list():\n",
-    "    if job.settings.name == \"medalion_pipeline\":\n",
-    "        jobmedalion = job.job_id\n",
-    "    elif job.settings.name == \"modeling_pipeline\":\n",
-    "        jobmodeling = job.job_id\n",
+    "    if job.settings.name == \"Nintendo Pipeline\":\n",
+    "        jobnintendo = job.job_id\n",
+    "    elif job.settings.name == \"Nintendo Pipeline\":\n",
+    "        jobnintendo = job.job_id\n",
     "\n",
-    "print(f\"Job ID medalion_pipeline: {jobmedalion}\")\n",
-    "print(f\"Job ID modeling_pipeline: {jobmodeling}\")\n",
+    "print(f\"Job ID Nintendo Pipeline: {jobnintendo}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e302a0ff-b5e8-41d7-b591-b5306decbf17",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "w = WorkspaceClient()\n",
     "\n",
-    "\n"
+    "dltpipeline = None\n",
+    "\n",
+    "# Lista todos os pipelines\n",
+    "for p in w.pipelines.list_pipelines():\n",
+    "    if p.name == \"DLT - nintendo\":\n",
+    "        dltpipeline = p.pipeline_id\n",
+    "\n",
+    "print(f\"Job ID DLT - nintendo: {dltpipeline}\")"
    ]
   },
   {
@@ -99,102 +124,80 @@
    },
    "outputs": [],
    "source": [
-    "medalion_pipeline = Job.from_dict(\n",
+    "dlt_pipeline = Job.from_dict(\n",
     "    {\n",
-    "    \"name\": \"medalion_pipeline\",\n",
-    "    \"description\": \"Pipeline de dados referente a processos de arquitetura medalion do projeto nintendo\",\n",
-    "    \"email_notifications\": {\n",
-    "        \"on_failure\": [\n",
-    "        \"felipegoraro@outlook.com\"\n",
-    "        ],\n",
-    "        \"on_duration_warning_threshold_exceeded\": [\n",
-    "        \"felipegoraro@outlook.com\"\n",
-    "        ]\n",
-    "    },\n",
-    "    \"webhook_notifications\": {},\n",
-    "    \"timeout_seconds\": 570,\n",
-    "    \"health\": {\n",
-    "        \"rules\": [\n",
-    "        {\n",
-    "            \"metric\": \"RUN_DURATION_SECONDS\",\n",
-    "            \"op\": \"GREATER_THAN\",\n",
-    "            \"value\": 540\n",
-    "        }\n",
-    "        ]\n",
-    "    },\n",
-    "    \"max_concurrent_runs\": 1,\n",
-    "    \"tasks\": [\n",
-    "        {\n",
-    "        \"task_key\": \"bronze\",\n",
-    "        \"run_if\": \"ALL_SUCCESS\",\n",
-    "        \"notebook_task\": {\n",
-    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/medalion/bronze\",\n",
-    "            \"source\": \"WORKSPACE\"\n",
-    "        },\n",
-    "        \"job_cluster_key\": \"job_nintendo\",\n",
-    "        \"timeout_seconds\": 0,\n",
-    "        \"email_notifications\": {}\n",
-    "        },\n",
-    "        {\n",
-    "        \"task_key\": \"silver\",\n",
-    "        \"depends_on\": [\n",
+    "        \"id\": \"6f61be34-7a80-430b-b00b-f6709fab3e7f\",\n",
+    "        \"pipeline_type\": \"WORKSPACE\",\n",
+    "        \"clusters\": [\n",
     "            {\n",
-    "            \"task_key\": \"bronze\"\n",
-    "            }\n",
-    "        ],\n",
-    "        \"run_if\": \"ALL_SUCCESS\",\n",
-    "        \"notebook_task\": {\n",
-    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/medalion/silver\",\n",
-    "            \"source\": \"WORKSPACE\"\n",
-    "        },\n",
-    "        \"job_cluster_key\": \"job_nintendo\",\n",
-    "        \"timeout_seconds\": 0,\n",
-    "        \"email_notifications\": {}\n",
-    "        },\n",
-    "        {\n",
-    "        \"task_key\": \"gold\",\n",
-    "        \"depends_on\": [\n",
-    "            {\n",
-    "            \"task_key\": \"silver\"\n",
-    "            }\n",
-    "        ],\n",
-    "        \"run_if\": \"ALL_SUCCESS\",\n",
-    "        \"notebook_task\": {\n",
-    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/medalion/gold\",\n",
-    "            \"source\": \"WORKSPACE\"\n",
-    "        },\n",
-    "        \"job_cluster_key\": \"job_nintendo\",\n",
-    "        \"timeout_seconds\": 0,\n",
-    "        \"email_notifications\": {}\n",
-    "        }\n",
-    "    ],\n",
-    "    \"job_clusters\": [\n",
-    "        {\n",
-    "        \"job_cluster_key\": \"job_nintendo\",\n",
-    "        \"new_cluster\": {\n",
-    "            \"cluster_name\": \"\",\n",
-    "            \"spark_version\": \"15.4.x-scala2.12\",\n",
-    "            \"node_type_id\": \"Standard_D4s_v3\",\n",
-    "            \"spark_env_vars\": {\n",
-    "            \"PYSPARK_PYTHON\": \"/databricks/python3/bin/python3\"\n",
+    "                \"label\": \"default\",\n",
+    "                \"node_type_id\": \"Standard_D4s_v3\",\n",
+    "                \"custom_tags\": {\n",
+    "                    \"pipelinetype\": \"DLT\"\n",
+    "                },\n",
+    "                \"autoscale\": {\n",
+    "                    \"min_workers\": 1,\n",
+    "                    \"max_workers\": 2,\n",
+    "                    \"mode\": \"ENHANCED\"\n",
+    "                }\n",
     "            },\n",
-    "            \"data_security_mode\": \"DATA_SECURITY_MODE_DEDICATED\",\n",
-    "            \"runtime_engine\": \"STANDARD\",\n",
-    "            \"kind\": \"CLASSIC_PREVIEW\",\n",
-    "            \"is_single_node\": True\n",
-    "        }\n",
-    "        }\n",
-    "    ],\n",
-    "    \"tags\": {\n",
-    "        \"project\": \"nintendo\",\n",
-    "        \"type\": \"medalion\"\n",
-    "    },\n",
-    "    \"queue\": {\n",
-    "        \"enabled\": True\n",
-    "    },\n",
-    "    \"run_as\": {\n",
-    "        \"user_name\": \"felipegoraro@outlook.com\"\n",
-    "    }\n",
+    "            {\n",
+    "                \"label\": \"maintenance\",\n",
+    "                \"custom_tags\": {\n",
+    "                    \"pipelinetype\": \"DLT\"\n",
+    "                }\n",
+    "            }\n",
+    "        ],\n",
+    "        \"development\": False,\n",
+    "        \"notifications\": [\n",
+    "            {\n",
+    "                \"email_recipients\": [\n",
+    "                    \"felipegoraro@outlook.com.br\"\n",
+    "                ],\n",
+    "                \"alerts\": [\n",
+    "                    \"on-update-failure\",\n",
+    "                    \"on-update-fatal-failure\",\n",
+    "                    \"on-flow-failure\"\n",
+    "                ]\n",
+    "            }\n",
+    "        ],\n",
+    "        \"continuous\": False,\n",
+    "        \"channel\": \"CURRENT\",\n",
+    "        \"photon\": False,\n",
+    "        \"libraries\": [\n",
+    "            {\n",
+    "                \"notebook\": {\n",
+    "                    \"path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/dlt-ingest-table\"\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"notebook\": {\n",
+    "                    \"path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/dlt-clean-table\"\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"notebook\": {\n",
+    "                    \"path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/dlt-fine-table\"\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"notebook\": {\n",
+    "                    \"path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/dlt-normalize\"\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"notebook\": {\n",
+    "                    \"path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/dlt-metrics\"\n",
+    "                }\n",
+    "            }\n",
+    "        ],\n",
+    "        \"name\": \"DLT - nintendo\",\n",
+    "        \"edition\": \"ADVANCED\",\n",
+    "        \"catalog\": \"nintendodatabricks_workspace\",\n",
+    "        \"configuration\": {\n",
+    "            \"fs.azure.account.key.nintendostorageaccount.dfs.core.windows.net\": \"{{secrets/nintendo-keyvault-scope/nintendo-storage-account-key-value}}\"\n",
+    "        },\n",
+    "        \"schema\": \"gold\"\n",
     "    }\n",
     ")\n",
     "\n",
@@ -202,9 +205,9 @@
     "\n",
     "w = WorkspaceClient()\n",
     "try:\n",
-    "    w.jobs.reset(new_settings=medalion_pipeline, job_id=jobmedalion)\n",
+    "    w.jobs.reset(new_settings=dlt_pipeline, job_id=dltpipeline)\n",
     "except:\n",
-    "    w.jobs.create(**medalion_pipeline.as_shallow_dict())\n"
+    "    w.jobs.create(**dlt_pipeline.as_shallow_dict())\n"
    ]
   },
   {
@@ -225,120 +228,151 @@
    },
    "outputs": [],
    "source": [
-    "modeling_pipeline = Job.from_dict(\n",
+    "job_pipeline = Job.from_dict(\n",
     "    {\n",
-    "    \"name\": \"modeling_pipeline\",\n",
-    "    \"description\": \"Pipeline de dados referente a processos de modelagem das tabelas do projeto nintendo em fato/dimensão\",\n",
+    "    \"name\": \"Nintendo Pipeline\",\n",
+    "    \"description\": \"Pipeline de dados referente a processos de arquitetura medalion do projeto nintendo\",\n",
     "    \"email_notifications\": {\n",
     "        \"on_failure\": [\n",
     "        \"felipegoraro@outlook.com\"\n",
     "        ],\n",
     "        \"on_duration_warning_threshold_exceeded\": [\n",
     "        \"felipegoraro@outlook.com\"\n",
-    "        ]\n",
+    "        ],\n",
+    "        \"no_alert_for_skipped_runs\": False\n",
     "    },\n",
     "    \"webhook_notifications\": {},\n",
-    "    \"timeout_seconds\": 570,\n",
+    "    \"notification_settings\": {\n",
+    "        \"no_alert_for_skipped_runs\": False,\n",
+    "        \"no_alert_for_canceled_runs\": False\n",
+    "    },\n",
+    "    \"timeout_seconds\": 2100,\n",
     "    \"health\": {\n",
     "        \"rules\": [\n",
     "        {\n",
     "            \"metric\": \"RUN_DURATION_SECONDS\",\n",
     "            \"op\": \"GREATER_THAN\",\n",
-    "            \"value\": 540\n",
+    "            \"value\": 1800\n",
     "        }\n",
     "        ]\n",
+    "    },\n",
+    "    \"trigger\": {\n",
+    "        \"pause_status\": \"UNPAUSED\",\n",
+    "        \"file_arrival\": {\n",
+    "        \"url\": \"abfss://nintendo@nintendostorageaccount.dfs.core.windows.net/inbound/\"\n",
+    "        }\n",
     "    },\n",
     "    \"max_concurrent_runs\": 1,\n",
     "    \"tasks\": [\n",
     "        {\n",
-    "        \"task_key\": \"table-details\",\n",
+    "        \"task_key\": \"DLT_Nintendo\",\n",
     "        \"run_if\": \"ALL_SUCCESS\",\n",
-    "        \"notebook_task\": {\n",
-    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/normalize/tabelas-detalhes\",\n",
-    "            \"source\": \"WORKSPACE\"\n",
+    "        \"pipeline_task\": {\n",
+    "            \"pipeline_id\": \"6f61be34-7a80-430b-b00b-f6709fab3e7f\",\n",
+    "            \"full_refresh\": False\n",
     "        },\n",
     "        \"timeout_seconds\": 0,\n",
-    "        \"email_notifications\": {}\n",
+    "        \"email_notifications\": {},\n",
+    "        \"webhook_notifications\": {}\n",
     "        },\n",
     "        {\n",
-    "        \"task_key\": \"table-price\",\n",
-    "        \"run_if\": \"ALL_SUCCESS\",\n",
-    "        \"notebook_task\": {\n",
-    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/normalize/tabelas-preço\",\n",
-    "            \"source\": \"WORKSPACE\"\n",
-    "        },\n",
-    "        \"timeout_seconds\": 0,\n",
-    "        \"email_notifications\": {}\n",
-    "        },\n",
-    "        {\n",
-    "        \"task_key\": \"table-products\",\n",
-    "        \"run_if\": \"ALL_SUCCESS\",\n",
-    "        \"notebook_task\": {\n",
-    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/normalize/tabelas-produtos\",\n",
-    "            \"source\": \"WORKSPACE\"\n",
-    "        },\n",
-    "        \"timeout_seconds\": 0,\n",
-    "        \"email_notifications\": {}\n",
-    "        },\n",
-    "        {\n",
-    "        \"task_key\": \"oled-metric\",\n",
+    "        \"task_key\": \"Test-Ingest\",\n",
     "        \"depends_on\": [\n",
     "            {\n",
-    "            \"task_key\": \"table-products\"\n",
-    "            },\n",
-    "            {\n",
-    "            \"task_key\": \"table-details\"\n",
-    "            },\n",
-    "            {\n",
-    "            \"task_key\": \"table-price\"\n",
+    "            \"task_key\": \"DLT_Nintendo\"\n",
     "            }\n",
     "        ],\n",
     "        \"run_if\": \"ALL_SUCCESS\",\n",
     "        \"notebook_task\": {\n",
-    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/metrics/best-price-oled\",\n",
+    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/test/ingest-test\",\n",
     "            \"source\": \"WORKSPACE\"\n",
     "        },\n",
+    "        \"job_cluster_key\": \"job-cluster-nintendo\",\n",
+    "        \"timeout_seconds\": 0,\n",
+    "        \"email_notifications\": {},\n",
+    "        \"webhook_notifications\": {}\n",
+    "        },\n",
+    "        {\n",
+    "        \"task_key\": \"Test-Clean\",\n",
+    "        \"depends_on\": [\n",
+    "            {\n",
+    "            \"task_key\": \"Test-Ingest\"\n",
+    "            }\n",
+    "        ],\n",
+    "        \"run_if\": \"ALL_SUCCESS\",\n",
+    "        \"notebook_task\": {\n",
+    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/test/clean-test\",\n",
+    "            \"source\": \"WORKSPACE\"\n",
+    "        },\n",
+    "        \"job_cluster_key\": \"job-cluster-nintendo\",\n",
+    "        \"timeout_seconds\": 0,\n",
+    "        \"email_notifications\": {},\n",
+    "        \"webhook_notifications\": {}\n",
+    "        },\n",
+    "        {\n",
+    "        \"task_key\": \"Test-Fine\",\n",
+    "        \"depends_on\": [\n",
+    "            {\n",
+    "            \"task_key\": \"Test-Clean\"\n",
+    "            }\n",
+    "        ],\n",
+    "        \"run_if\": \"ALL_SUCCESS\",\n",
+    "        \"notebook_task\": {\n",
+    "            \"notebook_path\": \"/Repos/felipegoraro@outlook.com/projeto_nintendo/src/test/fine-test\",\n",
+    "            \"source\": \"WORKSPACE\"\n",
+    "        },\n",
+    "        \"job_cluster_key\": \"job-cluster-nintendo\",\n",
     "        \"timeout_seconds\": 0,\n",
     "        \"email_notifications\": {}\n",
     "        }\n",
     "    ],\n",
     "    \"job_clusters\": [\n",
     "        {\n",
-    "        \"job_cluster_key\": \"job_nintendo\",\n",
+    "        \"job_cluster_key\": \"job-cluster-nintendo\",\n",
     "        \"new_cluster\": {\n",
     "            \"cluster_name\": \"\",\n",
     "            \"spark_version\": \"15.4.x-scala2.12\",\n",
-    "            \"node_type_id\": \"Standard_D4s_v3\",\n",
-    "            \"spark_env_vars\": {\n",
-    "            \"PYSPARK_PYTHON\": \"/databricks/python3/bin/python3\"\n",
+    "            \"spark_conf\": {\n",
+    "            \"spark.master\": \"local[*, 4]\",\n",
+    "            \"spark.databricks.cluster.profile\": \"singleNode\",\n",
+    "            \"fs.azure.account.key.nintendostorageaccount.dfs.core.windows.net\": \"{{secrets/nintendo-keyvault-scope/nintendo-storage-account-key-value}}\"\n",
     "            },\n",
-    "            \"data_security_mode\": \"DATA_SECURITY_MODE_DEDICATED\",\n",
+    "            \"azure_attributes\": {\n",
+    "            \"first_on_demand\": 1,\n",
+    "            \"availability\": \"SPOT_WITH_FALLBACK_AZURE\",\n",
+    "            \"spot_bid_max_price\": -1\n",
+    "            },\n",
+    "            \"node_type_id\": \"Standard_D4s_v3\",\n",
+    "            \"driver_node_type_id\": \"Standard_D4s_v3\",\n",
+    "            \"custom_tags\": {\n",
+    "            \"ResourceClass\": \"SingleNode\"\n",
+    "            },\n",
+    "            \"enable_elastic_disk\": True,\n",
+    "            \"data_security_mode\": \"SINGLE_USER\",\n",
     "            \"runtime_engine\": \"STANDARD\",\n",
-    "            \"kind\": \"CLASSIC_PREVIEW\",\n",
-    "            \"is_single_node\": True\n",
+    "            \"num_workers\": 0\n",
     "        }\n",
     "        }\n",
     "    ],\n",
     "    \"tags\": {\n",
     "        \"project\": \"nintendo\",\n",
-    "        \"type\": \"dimensional modeling\"\n",
+    "        \"type\": \"job\"\n",
     "    },\n",
     "    \"queue\": {\n",
     "        \"enabled\": True\n",
     "    },\n",
+    "    \"performance_target\": \"PERFORMANCE_OPTIMIZED\",\n",
     "    \"run_as\": {\n",
     "        \"user_name\": \"felipegoraro@outlook.com\"\n",
     "    }\n",
     "    }\n",
     ")\n",
     "\n",
-    "from databricks.sdk import WorkspaceClient\n",
-    "\n",
     "w = WorkspaceClient()\n",
     "try:\n",
-    "    w.jobs.reset(new_settings=modeling_pipeline, job_id=jobmodeling)\n",
+    "    w.jobs.reset(new_settings=job_pipeline, job_id=jobnintendo)\n",
     "except:\n",
-    "    w.jobs.create(**modeling_pipeline.as_shallow_dict())\n"
+    "    w.jobs.create(**job_pipeline.as_shallow_dict())\n"
    ]
   }
  ],
