retirando magic command %sql

--- a/src/dlt-metrics.ipynb
+++ b/src/dlt-metrics.ipynb
@@ -15,7 +15,6 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
     "CREATE OR REFRESH LIVE TABLE sugestion\n",
     "COMMENT \"Tabela referente a sgestão de compra por meio de pagamento aos consoles nitnendo\"\n",
     "AS\n",
@@ -25,13 +24,13 @@
     "        nome,\n",
     "        origem\n",
     "\n",
-    "    FROM LIVE.produtos\n",
+    "    FROM nintendodatabricks_workspace.gold.produtos\n",
     "),\n",
     "preco AS (\n",
     "    SELECT\n",
     "        codigo,\n",
     "        preco\n",
-    "    FROM LIVE.precos\n",
+    "    FROM nintendodatabricks_workspace.gold.precos\n",
     "),\n",
     "\n",
     "detalhes AS (\n",
@@ -40,7 +39,7 @@
     "        oled,\n",
     "        link,\n",
     "        recomendacao\n",
-    "    FROM LIVE.detalhes\n",
+    "    FROM nintendodatabricks_workspace.gold.detalhes\n",
     "),\n",
     "\n",
     "produtos_filtrados AS (\n",
@@ -55,7 +54,7 @@
     "    FROM produtos\n",
     "    JOIN preco ON produtos.codigo = preco.codigo\n",
     "    JOIN detalhes ON produtos.codigo = detalhes.codigo\n",
-    "    WHERE detalhes.oled = 'Sim' AND produtos.origem IN (SELECT DISTINCT origem FROM LIVE.produtos)\n",
+    "    WHERE detalhes.oled = 'Sim' AND produtos.origem IN (SELECT DISTINCT origem FROM nintendodatabricks_workspace.gold.produtos)\n",
     "),\n",
     "\n",
     "menores_precos AS (\n",
@@ -86,7 +85,7 @@
     "environment_version": "3"
    },
    "inputWidgetPreferences": null,
-   "language": "python",
+   "language": "sql",
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
@@ -94,7 +93,7 @@
    "widgets": {}
   },
   "language_info": {
-   "name": "python"
+   "name": "sql"
   }
  },
  "nbformat": 4,
