--- a/src/dlt-normalize.ipynb
+++ b/src/dlt-normalize.ipynb
@@ -7,27 +7,6 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "a53b93f6-9e84-41ba-8615-a8b6e2264d7f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "CREATE LIVE VIEW consoles_recomendation\n",
-    "AS\n",
-    "SELECT * FROM nintendodatabricks_workspace.gold.consoles_recomendation;\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
      "nuid": "b636c699-6d53-491b-92f8-bcb20957d0d5",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -39,15 +18,13 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
     "CREATE OR REFRESH LIVE TABLE detalhes\n",
     "COMMENT \"Tabela referente a informações de detalhes de consoles nintendo\"\n",
     "AS\n",
     "SELECT \n",
     "    codigo,\n",
     "    memoria,\n",
-    "    oled,\n",
-    "    recomendacao,\n",
+    "    oled,    recomendacao,\n",
     "    link\n",
     "FROM (\n",
     "    SELECT \n",
@@ -58,7 +35,7 @@
     "        link,\n",
     "        extract,\n",
     "        ROW_NUMBER() OVER (PARTITION BY codigo ORDER BY extract DESC) AS rn\n",
-    "    FROM LIVE.consoles_recomendation\n",
+    "    FROM nintendodatabricks_workspace.gold.consoles_recomendation\n",
     ")\n",
     "WHERE rn = 1\n",
     "ORDER BY codigo;"
@@ -79,7 +56,6 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
     "CREATE OR REFRESH LIVE TABLE produtos\n",
     "COMMENT \"Tabela referente aos produtos do console nintendo\"\n",
     "AS\n",
@@ -94,7 +70,7 @@
     "        origem,\n",
     "        extract,\n",
     "        ROW_NUMBER() OVER (PARTITION BY codigo ORDER BY extract DESC) AS rn\n",
-    "    FROM LIVE.consoles_recomendation\n",
+    "    FROM nintendodatabricks_workspace.gold.consoles_recomendation\n",
     ")\n",
     "WHERE rn = 1\n",
     "ORDER BY codigo"
@@ -115,7 +91,6 @@
    },
    "outputs": [],
    "source": [
-    "%sql\n",
     "CREATE OR REFRESH LIVE TABLE precos\n",
     "COMMENT \"Tabela referente aos valores e formas de pagamento dos produtos do console nintendo\"\n",
     "AS\n",
@@ -127,7 +102,7 @@
     "    desconto,\n",
     "    `extract` as `data`\n",
     "\n",
-    "FROM LIVE.consoles_recomendation\n",
+    "FROM nintendodatabricks_workspace.gold.consoles_recomendation\n",
     "ORDER BY preco ASC"
    ]
   }
@@ -141,7 +116,7 @@
     "environment_version": "3"
    },
    "inputWidgetPreferences": null,
-   "language": "python",
+   "language": "sql",
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
@@ -149,7 +124,7 @@
    "widgets": {}
   },
   "language_info": {
-   "name": "python"
+   "name": "sql"
   }
  },
  "nbformat": 4,
